[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/scorch_01.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="Curve" id=2]
bake_resolution = 50
_data = [ Vector2( 0, 0.504545 ), 0.0, 1.75566, 0, 0, Vector2( 0.976744, 1 ), 0.147911, -0.344, 0, 0 ]

[node name="Enemy" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
mode = 2
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DeathExplosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 0.15
one_shot = true
texture = ExtResource( 2 )
direction = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
scale_amount = 10.0
scale_amount_curve = SubResource( 2 )
color = Color( 1, 1, 0, 0.901961 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
